other page links updated

--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -282,13 +282,13 @@
 }
 
 .contact-section {
-  background-color: #F4F4F9; // Light background for the section
+  // background-color: #F4F4F9; // Light background for the section
   padding: 3rem 0;
 
   .section-title {
     font-size: 2.5rem;
     color: #333;
-  }
+}
 
   .form-floating {
     margin-bottom: 1.5rem;
