--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -132,7 +132,7 @@
             <br><br>
             Thus ESPeople facilitates for desired organizational ranking within your industry through your people.
           </p>
-          <div class="d-flex gap-3 align-items-center">
+          <div class="d-flex gap-3 align-items-center mt-3">
             <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -159,7 +159,7 @@
           <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions.
           </p>
           <strong><em>ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term impacts through their projects and programs to their community.</em></strong>
-          <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
+          <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -185,7 +185,7 @@
             Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
           </p>
           <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
-          <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
+          <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -211,7 +211,7 @@
           <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various stack holders and public in connection with various programs & projects government sets as a priority goals for nations growth & development</p>
 
           <strong><em>ESPeople efforts are invested through its learning solutions for nations priority growth & developmental road map</em></strong>
-          <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
+          <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
