--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -20,23 +20,23 @@
         </div>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/about-us-esp-approach">About</a>
+            </li>
+    <!-- <li class="nav-item">
+        <a class="nav-link" href="#">Blog</a>
+    </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="/clientele-beneficiaries">Clientele</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Clientele</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Other L&D</a>
+                <a class="nav-link" href="/other-l-and-d-services">Other L&D</a>
             </li>
             <!-- our training programs -->
-             <li class="nav-item">
+             <li class="nav-item d-none">
               <a class="nav-link" href="#">Training Programs</a>
              </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="/contact-us">Contact us</a>
             </li>
         </ul>
 
