--- a/themes/growth-sketch/layouts/clientele-beneficiaries/list.html
+++ b/themes/growth-sketch/layouts/clientele-beneficiaries/list.html
@@ -2,7 +2,7 @@
 {{ if eq .Params.layout "industries" }}
 
  
-<section id="industries" class="industries-we-serve py-5">
+<section id="industries" class="industries-we-serve py-5 d-none">
     <!-- <div class="container"> -->
     <!-- Page Title -->
     <h2 class="section-title text-center mb-5">Clientele Beneficiaries</h2>
@@ -130,5 +130,115 @@
     <!-- </div> -->
 </section>
 
+<!-- sec 3 - clientele brief -->
+<section id="clientele" class="industry-section py-8 px-4 px-md-0">
+    <!-- Page Title -->
+    <!-- <h2 class="section-title text-center mb-5">Clientele Beneficiaries</h2> -->
+  
+    <!-- Business Organizations -->
+    <div class="business-section py-5">
+      <div class="container">
+  
+        <div class="row align-items-center">
+  
+          <div class="col-md-6 order-md-1">
+            <h3 class="industry-title mt-3 mt-md-0">ESP Business</h3>
+            <hr>
+            <h4>Learning Solutions</h4>
+            <p><em>We deliver transformative, contemporary People Developmental Learning for desired results of your business.</em>
+              <br><br>
+              Which will enhance executive & managerial productivity with leadership optimization for your organization.
+              <br><br>
+              Thus ESPeople facilitates for desired organizational ranking within your industry through your people.
+            </p>
+            <div class="d-flex gap-3 align-items-center mt-3">
+              <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
+              <a href="" class="btn btn-primary-outline">Watch Video</a>
+            </div>
+          </div>
+          <div class="col-md-6 order-first">
+            <img src="/images/ESP-Business-1.jpeg" alt="Business Icon" class="industry-icon neumorphism">
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  
+    <!-- Non-Profit Organizations -->
+    <div class="nonprofit-section py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 order-first">
+            <img src="/images/non-profit.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
+          </div>
+          <div class="col-md-6">
+            <h3 class="industry-title mt-3 mt-md-0">ESP Non-Profit</h3>
+            <hr>
+            <h4>Learning Solutions</h4>
+            <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions.
+            </p>
+            <strong><em>ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term impacts through their projects and programs to their community.</em></strong>
+            <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
+              <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
+              <a href="" class="btn btn-primary-outline">Watch Video</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  
+    <!-- Education Sector -->
+    <div class="education-section py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 order-first">
+            <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon neumorphism">
+          </div>
+          <div class="col-md-6 order-md-1">
+            <h3 class="industry-title mt-3 mt-md-0">ESP Education</h3>
+            <hr>
+            <h4>Learning Solutions</h4>
+            <p><em>We empower educators and students to innovate & collaborate, fostering growth-oriented learnings in the journey towards academic excellence.</em></p>
+            <p>
+              Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
+            </p>
+            <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
+            <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
+              <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
+              <a href="" class="btn btn-primary-outline">Watch Video</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+    <!-- Government Organizations -->
+    <div class="government-section py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 order-first">
+            <img src="/images/Indian-Parliment-1.webp" alt="Government Icon" class="industry-icon neumorphism">
+          </div>
+          <div class="col-md-6 order-md-2">
+            <h3 class="industry-title mt-3 mt-md-0">ESP Government</h3>
+            <hr>
+            <h4>Learning Solutions</h4>
+            <p><em>
+              We align & train government teams to work towards efficient, transparent, good governance for impactful public service in the process of nation building.
+            </em></p>
+            <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various stack holders and public in connection with various programs & projects government sets as a priority goals for nations growth & development</p>
+  
+            <strong><em>ESPeople efforts are invested through its learning solutions for nations priority growth & developmental road map</em></strong>
+            <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
+              <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
+              <a href="" class="btn btn-primary-outline">Watch Video</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  </section>
 {{ end }}
 {{ end }}
