--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -4,13 +4,15 @@
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-5 mt-3 mt-md-0">
-        <h1 class="display-5 mb-2">Is your business/organization struggling to achieve its' goals and to energize your
+        <h1 class="display-5 mb-2">Is your business struggling to achieve its' goals and energize your
           team?</h1>
-          <em>At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through collaborative efforts.</em>
-          <p class="mt-2 mt-md-3 mb-0">We integrate your teams full collective potentials and optimize your management & leadership capabilities towards mission accomplishments</p>
+        <em>At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through
+          collaborative efforts.</em>
+        <p class="mt-2 mt-md-3 mb-0">We integrate your teams full collective potentials and optimize your management &
+          leadership capabilities towards mission accomplishments</p>
         <!-- <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
           potentials and optimize your management & leadership towards mission accomplishments</p> -->
-        <em>Thus we are ESPeople Trainingsmiths</em> 
+        <em>Thus we are ESPeople Trainingsmiths</em>
         <div class="btn-row mt-2 mt-md-3 d-none">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
             us</button>
@@ -39,13 +41,15 @@
               </div>
             </div> -->
             <div class="carousel-item">
-              <img src="/images/education-img-1.jpeg" class="d-block w-100 carousel-image neumorphism " alt="Third Image">
+              <img src="/images/education-img-1.jpeg" class="d-block w-100 carousel-image neumorphism "
+                alt="Third Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Education</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/rashtrapathi-bhavan.jpg" class="d-block w-100 carousel-image neumorphism " alt="Fourth Image">
+              <img src="/images/rashtrapathi-bhavan.jpg" class="d-block w-100 carousel-image neumorphism "
+                alt="Fourth Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Government</h5>
               </div>
@@ -105,7 +109,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </div>
@@ -123,16 +127,19 @@
       <div class="row align-items-center">
 
         <div class="col-md-6 order-md-1">
-          <h3 class="industry-title mt-3 mt-md-0">ESP Business</h3>
+          <h3 class="industry-title mt-4 mt-md-0">ESP Business</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p><em>We deliver transformative, contemporary People Developmental Learning for desired results of your business.</em>
-            <br><br>
-            Which will enhance executive & managerial productivity with leadership optimization for your organization.
-            <br><br>
-            Thus ESPeople facilitates for desired organizational ranking within your industry through your people.
+          <p><em><strong>We deliver transformative, contemporary People Developmental Learning for desired results of
+                your business.</strong></em></p>
+
+          <p>Which will enhance executive & managerial productivity with leadership optimization for your organization.
           </p>
-          <div class="d-flex gap-3 align-items-center mt-3">
+          <p>
+            <em><strong>Thus ESPeople facilitates for desired organizational ranking within your industry through your
+                people.</strong></em>
+          </p>
+          <div class="d-flex gap-3 align-items-center mt-4">
             <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -153,13 +160,26 @@
           <img src="/images/non-profit.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6">
-          <h3 class="industry-title mt-3 mt-md-0">ESP Non-Profit</h3>
+          <h3 class="industry-title mt-4 mt-md-0">ESP Non-Profit</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions.
+          <p><em><strong>Our learning solutions are different, unique & transformative for non profits.</strong></em>
           </p>
-          <strong><em>ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term impacts through their projects and programs to their community.</em></strong>
-          <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
+
+          <p>
+            Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of
+            resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection
+            environs, constantly networking for volunteers to support social cause etc, are configured as prime
+            important in our learning solutions.
+          </p>
+
+
+          <p>
+            <strong><em>ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term
+                impacts through their projects and programs to their community.</em></strong>
+          </p>
+          <!-- </p> -->
+          <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -177,15 +197,18 @@
           <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-1">
-          <h3 class="industry-title mt-3 mt-md-0">ESP Education</h3>
+          <h3 class="industry-title mt-4 mt-md-0">ESP Education</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p><em>We empower educators and students to innovate & collaborate, fostering growth-oriented learnings in the journey towards academic excellence.</em></p>
-          <p>
-            Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
+          <p><em><strong>We empower educators and students to innovate & collaborate, fostering growth-oriented
+                learnings in the journey towards academic excellence.</strong></em></p>
+
+          <p>Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
           </p>
-          <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
-          <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
+          <p>
+            <strong><em>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</em></strong>
+          </p>
+          <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -202,16 +225,20 @@
           <img src="/images/Indian-Parliment-1.webp" alt="Government Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-2">
-          <h3 class="industry-title mt-3 mt-md-0">ESP Government</h3>
+          <h3 class="industry-title mt-4 mt-md-0">ESP Government</h3>
           <hr>
           <h4>Learning Solutions</h4>
           <p><em>
-            We align & train government teams to work towards efficient, transparent, good governance for impactful public service in the process of nation building.
-          </em></p>
-          <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various stack holders and public in connection with various programs & projects government sets as a priority goals for nations growth & development</p>
+              <strong>We align & train government teams to work towards efficient, transparent, good governance for
+                impactful public service in the process of nation building.</strong>
+            </em></p>
+          <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various
+            stack holders and public in connection with various programs & projects government sets as a priority goals
+            for nations growth & development</p>
 
-          <strong><em>ESPeople efforts are invested through its learning solutions for nations priority growth & developmental road map</em></strong>
-          <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
+          <p><strong><em>ESPeople efforts are invested through its learning solutions for nations priority growth &
+                developmental road map</em></strong></p>
+          <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
             <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
@@ -230,37 +257,40 @@
       <div class="evolution-section col-md-5 me-auto" data-aos="fade-right">
         <h1 class="display-5 mb-3">The Evolution of ESPeople</h1>
         <p class="evolution">
-          Every great organisation starts with a dream—a vision for achieving excellence. But to turn that vision into reality, you need the right people who have the energy and ability to make things happen. That's where ESPeople come in. We partner with organisations to develop and empower their teams, helping them turn their original dream into reality and inspire new heights of success
+          Every great organisation starts with a dream—a vision for achieving excellence. But to turn that vision into
+          reality, you need the right people who have the energy and ability to make things happen. That's where
+          ESPeople come in. We partner with organisations to develop and empower their teams, helping them turn their
+          original dream into reality and inspire new heights of success
         </p>
         <!-- <a href="#about-us" class="btn btn-dark mt-4">About us</a> -->
       </div>
-    <!-- Divider -->
-    <div class="col-md-2 mx-auto d-none d-md-block">
-          <div class="vertical-divider"></div>
-        </div>
+      <!-- Divider -->
+      <div class="col-md-2 mx-auto d-none d-md-block">
+        <div class="vertical-divider"></div>
+      </div>
 
       <!-- Vision & Mission Section -->
       <div class="col-md-5 ms-auto vision-mission-section" data-aos="fade-left">
         <h1 class="display-5">ESP Vision & Mission</h1>
         <p class="vision">
-          <strong>Energize & Synergize People</strong> capabilities through effective learning interventions
+          <em><strong>Energize & Synergize People</strong> capabilities through effective learning interventions</em>
         </p>
         <p class="mission">
           <strong>Be a best training service provider in enabling people</strong>
         </p>
         <ul>
           <li>to maximize their energy &</li>
-          <li>to effectively employ it in synergy with their team</li>
+          <li>to effectively employ it in synergy with their teams</li>
           <li>towards organizational goals achievement</li>
         </ul>
       </div>
-    <!-- </div> -->
-  </div>
+      <!-- </div> -->
+    </div>
   </div>
 </section>
 
 <!-- learning model flower blossom animation section -->
-<div class="learning-model-container">
+<div class="learning-model-container d-none">
   <div class="my-4 text-center">
     <h1 class="my-3">ESP Learning model</h1>
     <a class="btn btn-primary" onclick="nextStage('awareness')">Start Learning</a>
@@ -314,9 +344,12 @@
         <div class="neumorphic-card">
           <h4 class="mt-3">Our Core Belief</h4>
           <img src="/images/tyndal-effect.jpeg" alt="Philosophy img">
-          <p class="mt-3">Love people for who they are instead of judging them for what they are not....<br> <br>Essence
-            is, accept people as they are! <br><br> Bridge the gap in required knowledge, skills, and practices which
-            are appropriate to their aspirational growth goals</p>
+          <p class="mt-3">Love people for who they are instead of judging them for what they are not....
+            <br> <br>
+            Essence is, accept people as they are!
+            <br> <br>
+            Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational growth goals
+          </p>
         </div>
       </div>
 
@@ -325,17 +358,13 @@
         <div class="neumorphic-card">
           <h4 class="mt-3">The ESP Learning Model</h4>
           <img src="/images/learning-model.png" alt="learning model">
-          <ul>
+          <ul class="mt-3">
             <li><strong>Awareness</strong> – Learning begins with creating a sense of awareness about the situation.
             </li>
-            <li><strong>Understanding</strong> – This is further enhanced by the resource person, helping the individual
-              gain a greater clarity of their situation.</li>
-            <li><strong>Learning</strong> – Understanding facilitates better learning by enabling the individual to see
-              its real-world application.</li>
-            <li><strong>Realisation</strong> – As realization unfolds, the individual is now able to perceive their
-              situation in its entirety.</li>
-            <li><strong>Habitualisation</strong> – An environment is created within the individual to internalize and
-              habitualize the learned skill or behavior.</li>
+            <li><strong>Understanding</strong> – This is further enhanced by the resource person, helping the individual gain a greater clarity of their situation.</li>
+            <li><strong>Learning</strong> – Understanding facilitates better learning by enabling the individual to see its real-world application.</li>
+            <li><strong>Realisation</strong> – – As realization unfolds, the individual is now able to perceive their situation in its entirety.</li>
+            <li><strong>Habitualisation</strong> – An environment is created within the individual to internalize and habitualize the learned skill or behavior.</li>
           </ul>
         </div>
       </div>
@@ -344,8 +373,7 @@
         <div class=" neumorphic-card">
           <h4 class="mt-3">What we deliver</h4>
           <img src="/images/what-we-deliver.png" alt="what we deliver">
-          <p class="text-center text-md-start"><strong>We simply ENERGIZE your people capabilities & then SYNERGIZE them
-              with their core team for high performance</strong></p>
+          <p class="text-center text-md-start mt-3">We simply ENERGIZE your people capabilities & then SYNERGIZE them with their core team for high performance</p>
           <strong><em>"Thus we are ESPeople Trainingsmiths"</em></strong>
 
         </div>
