--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -247,6 +247,42 @@
     </div>
 
   </div>
+  <!-- Focussed Individual -->
+
+  <div class="clientele-section py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-first">
+          <img src="/images/focussed.png" alt="Clientele Icon" class="industry-icon neumorphism">
+        </div>
+        <div class="col-md-6 order-md-1">
+          <h3 class="industry-title mt-4 mt-md-0">Focussed Individual Clientele</h3>
+          <hr>
+          <h4>Personalized Development</h4>
+          <p><em><strong>We provide tailored solutions for individuals seeking personal growth, skill enhancement, and guidance towards their unique goals.</strong></em></p>
+  
+          <p>Our focused clientele includes:</p>
+          <ul>
+            <li>Slow Learners</li>
+            <li>Consultants</li>
+            <li>Homemakers</li>
+            <li>Career Transitioners</li>
+            <li>Capability Assessment</li>
+            <li>Aspirational Assessment</li>
+            <li>Dream Path Guidance</li>
+          </ul>
+  
+          <p><strong><em>Empowering each individual to realize their potential and build a fulfilling life journey.</em></strong></p>
+  
+          <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start">
+            <a href="/clientele-beneficiaries/focused-individual" class="btn btn-primary">Know more</a>
+            <a href="" class="btn btn-primary-outline">Watch Video</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </section>
 
 <!-- sec 4 - evolution -->
@@ -290,7 +326,7 @@
 </section>
 
 <!-- learning model flower blossom animation section -->
-<div class="learning-model-container d-none">
+<div class="learning-model-container">
   <div class="my-4 text-center">
     <h1 class="my-3">ESP Learning model</h1>
     <a class="btn btn-primary" onclick="nextStage('awareness')">Start Learning</a>
