--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -4,15 +4,15 @@
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-5 mt-3 mt-md-0">
-        <h1 class="display-5 mb-2">Is your business struggling to achieve its' goals and energize your
+        <h1 class="display-5 mb-2">Is your business or organization struggling to achieve its' goals and energize your
           team?</h1>
         <em>At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through
           collaborative efforts.</em>
-        <p class="mt-2 mt-md-3 mb-0">We integrate your teams full collective potentials and optimize your management &
+        <p class="mt-2 mt-md-3 mb-3">We integrate your teams full collective potentials and optimize your management &
           leadership capabilities towards mission accomplishments</p>
         <!-- <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
           potentials and optimize your management & leadership towards mission accomplishments</p> -->
-        <em>Thus we are ESPeople Trainingsmiths</em>
+        <h5><strong><em>"Thus we are ESPeople Trainingsmiths"</em></strong></h5>
         <div class="btn-row mt-2 mt-md-3 d-none">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
             us</button>
