--- a/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
@@ -38,6 +38,10 @@
 .bg-primary {
     background-color: $primary-clr;
 }
+// bg-primary--light
+.bg-primary--light {
+    background-color: $primary-clr--light;
+}
 
 .text-primary {
     color: $primary-clr;
