--- a/themes/growth-sketch/assets/scss/abstracts/_variables.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_variables.scss
@@ -1,21 +1,28 @@
 // Colors
-// $secondary-clr: #2C2C2C;
-$white: #fff;
-$black: #000;
-$dark-clr: #2C2C2C;
-$text-dark: hsl(240, 29%, 07%);
+$hue-primary: 210;
+$saturation-primary: 100%;
+$lightness-primary: 25%;
+$color-primary: hsl($hue-primary, $saturation-primary, $lightness-primary);
 
+$primary-clr: hsl(210, 100%, 25%);
+$secondary-clr: hsl(200, 57%, 9%);
+$hue-secondary:200;
+$saturation-secondary: 57%;
+$lightness-secondary: 9%;
+$color-secondary: hsl($hue-secondary, $saturation-secondary, $lightness-secondary);
 
-/* SCSS HSL */
-$primary-clr: hsla(194, 86%, 36%, 1);
-$secondary-clr: hsla(200, 57%, 9%, 1);
-$light-clr: hsla(195, 33%, 98%, 1);
-$primary-clr--dark: hsla(206, 79%, 17%, 1);
-$charcoal: hsla(198, 18%, 29%, 1);
 $accent-clr: hsl(45, 100%, 51%);
 
-$primary-clr: hsla(210, 100%, 25%, 1);
-$accent-clr: hsla(36, 100%, 50%, 1);
+$primary-clr--light: hsla(194, 86%, 86%, 1);
+$primary-clr--dark: hsla(206, 79%, 17%, 1);
+
+$light-clr: hsla(195, 33%, 98%, 1);
+$charcoal: hsla(198, 18%, 29%, 1);
+$white: #fff;
+$black: #000;
+$dark-clr: hsl(0, 0%, 17%);
+$text-dark: hsl(240, 29%, 07%);
+
 
 // cards
 $card-dark: #dcdce0;
