--- a/themes/growth-sketch/layouts/_default/home copy.html
+++ b/themes/growth-sketch/layouts/_default/home copy.html
@@ -322,7 +322,7 @@
           </div>
           <div class="d-flex gap-3 align-items-center">
             <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Video</a>
+            <a href="" class="btn btn-primary--outline">Video</a>
           </div>
         </div>
       </div>
