--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,14 +1,16 @@
 {{ define "main" }}
 <!-- Section 1- Hero -->
-<section class="hero d-flex align-items-center pt-0 pt-md-3 pb-3  bg-primary text-light">
+<section class="hero d-flex align-items-center pt-0 pt-md-3 pb-3  bg-primary--light">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
-      <div class="col-md-5 mt-3 mt-md-0">
+      <div class="col-md-5 mt-2 mt-md-0 px-3 px-md-0">
         <h1 class="display-5 mb-2">Is your business or organization struggling to achieve its' goals and energize your
           team?</h1>
-        <em>At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through
-          collaborative efforts.</em>
-        <p class="mt-2 mt-md-3 mb-3">We integrate your teams full collective potentials and optimize your management &
+        <strong>
+          <em>At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through
+            collaborative efforts.</em>
+        </strong>
+        <p class="mt-2 mt-md-3 mb-2">We integrate your teams full collective potentials and optimize your management &
           leadership capabilities towards mission accomplishments</p>
         <!-- <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
           potentials and optimize your management & leadership towards mission accomplishments</p> -->
@@ -16,7 +18,7 @@
         <div class="btn-row mt-2 mt-md-3 d-none">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
             us</button>
-          <!-- <button class="btn btn-secondary-outline ms-md-3">Main features</button> -->
+          <!-- <button class="btn btn-secondary--outline ms-md-3">Main features</button> -->
         </div>
       </div>
       <div class="col-md-6 order-first order-md-2 px-0 px-md-2">
@@ -71,39 +73,40 @@
 <!-- <hr class="text-center section-divider mx-auto"> -->
 
 <!-- section 2 - for whom we deliver -->
-<section class="beneficiaries py-5 px-4 px-md-0">
+<section class="beneficiaries pt-5 px-4 px-md-0">
   <div class="container">
     <div class="row align-items-center justify-content-around">
       <!-- Left Section (Text) -->
 
       <div class="col-md-4 text-center text-md-start">
-        <h1 class="text-primary display-5 mb-3">Our Beneficiaries</h1>
+        <h1 class="text-primary mb-3">Clientele</h1>
+        <h3 class="">Our Beneficiaries</h>
         <h4 class="sub-title"><em>Whom we empower with our ESP learning solutions</em>....</h4>
       </div>
 
       <!-- Right Section (Cards) -->
       <div class="col-md-6 mt-4 mt-md-0">
-        <div class="row gap-2 justify-content-between">
+        <div class="row justify-content-between">
           <div class="col-12 p-0 justify-items-center">
-            <div class="beneficiary-card py-4">
+            <div class="beneficiary-card">
               <i class="fa-solid fa-business-time"></i>
               <p class="mb-0">ESP Business</p>
             </div>
           </div>
           <div class="col-5 p-0">
-            <div class="beneficiary-card py-4">
+            <div class="beneficiary-card">
               <i class="fa-solid fa-building-ngo"></i>
               <p class="mb-0">ESP Non-Profit</p>
             </div>
           </div>
           <div class="col-5 p-0">
-            <div class="beneficiary-card py-4">
+            <div class="beneficiary-card">
               <i class="fa-solid fa-user-graduate"></i>
               <p class="mb-0">ESP Education</p>
             </div>
           </div>
           <div class="col-12 p-0 justify-items-center">
-            <div class="beneficiary-card py-4">
+            <div class="beneficiary-card">
               <i class="fa-solid fa-landmark"></i>
               <p class="mb-0">ESP Government</p>
             </div>
@@ -116,18 +119,18 @@
 </section>
 
 <!-- sec 3 - clientele brief -->
-<section id="clientele" class="industry-section py-8 px-4 px-md-0">
+<section id="clientele" class="industry-section py-8">
   <!-- Page Title -->
   <!-- <h2 class="section-title text-center mb-5">Clientele Beneficiaries</h2> -->
 
   <!-- Business Organizations -->
-  <div class="business-section py-5">
+  <div class="business-section bg-primary--light px-4 px-md-0 py-5">
     <div class="container">
 
       <div class="row align-items-center">
 
         <div class="col-md-6 order-md-1">
-          <h3 class="industry-title mt-4 mt-md-0">ESP Business</h3>
+          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-business-time"></i>ESP Business</h3>
           <hr>
           <h4>Learning Solutions</h4>
           <p><em><strong>We deliver transformative, contemporary People Developmental Learning for desired results of
@@ -141,7 +144,7 @@
           </p>
           <div class="d-flex gap-3 align-items-center mt-4">
             <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
-            <a href="" class="btn btn-primary-outline">Watch Video</a>
+            <a href="" class="btn btn-primary--outline_none">Watch Video</a>
           </div>
         </div>
         <div class="col-md-6 order-first">
@@ -153,14 +156,14 @@
   </div>
 
   <!-- Non-Profit Organizations -->
-  <div class="nonprofit-section py-5">
+  <div class="nonprofit-section px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
           <img src="/images/non-profit.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6">
-          <h3 class="industry-title mt-4 mt-md-0">ESP Non-Profit</h3>
+          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-building-ngo"></i>ESP Non-Profit</h3>
           <hr>
           <h4>Learning Solutions</h4>
           <p><em><strong>Our learning solutions are different, unique & transformative for non profits.</strong></em>
@@ -181,7 +184,7 @@
           <!-- </p> -->
           <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Watch Video</a>
+            <a href="" class="btn btn-primary--outline_none">Watch Video</a>
           </div>
         </div>
       </div>
@@ -190,14 +193,14 @@
   </div>
 
   <!-- Education Sector -->
-  <div class="education-section py-5">
+  <div class="education-section bg-primary--light px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
           <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-1">
-          <h3 class="industry-title mt-4 mt-md-0">ESP Education</h3>
+          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-user-graduate"></i>ESP Education</h3>
           <hr>
           <h4>Learning Solutions</h4>
           <p><em><strong>We empower educators and students to innovate & collaborate, fostering growth-oriented
@@ -210,7 +213,7 @@
           </p>
           <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Watch Video</a>
+            <a href="" class="btn btn-primary--outline_none">Watch Video</a>
           </div>
         </div>
       </div>
@@ -218,14 +221,14 @@
 
   </div>
   <!-- Government Organizations -->
-  <div class="government-section py-5">
+  <div class="government-section px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
           <img src="/images/Indian-Parliment-1.webp" alt="Government Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-2">
-          <h3 class="industry-title mt-4 mt-md-0">ESP Government</h3>
+          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-landmark"></i>ESP Government</h3>
           <hr>
           <h4>Learning Solutions</h4>
           <p><em>
@@ -240,16 +243,16 @@
                 developmental road map</em></strong></p>
           <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Watch Video</a>
+            <a href="" class="btn btn-primary--outline_none">Watch Video</a>
           </div>
         </div>
       </div>
     </div>
 
   </div>
-  <!-- Focussed Individual -->
 
-  <div class="clientele-section py-5">
+  <!-- Focussed Individual -->
+  <div class="clientele-section px-4 px-md-0 py-5 d-none">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
@@ -276,7 +279,7 @@
   
           <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start">
             <a href="/clientele-beneficiaries/focused-individual" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Watch Video</a>
+            <a href="" class="btn btn-primary--outline_none">Watch Video</a>
           </div>
         </div>
       </div>
@@ -434,3 +437,4 @@
 </section>
 
 {{ end }}
+
