--- a/themes/growth-sketch/layouts/clientele-beneficiaries/list.html
+++ b/themes/growth-sketch/layouts/clientele-beneficiaries/list.html
@@ -153,7 +153,7 @@
             </p>
             <div class="d-flex gap-3 align-items-center mt-3">
               <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
-              <a href="" class="btn btn-primary-outline">Watch Video</a>
+              <a href="" class="btn btn-primary--outline">Watch Video</a>
             </div>
           </div>
           <div class="col-md-6 order-first">
@@ -180,7 +180,7 @@
             <strong><em>ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term impacts through their projects and programs to their community.</em></strong>
             <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
               <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
-              <a href="" class="btn btn-primary-outline">Watch Video</a>
+              <a href="" class="btn btn-primary--outline">Watch Video</a>
             </div>
           </div>
         </div>
@@ -206,7 +206,7 @@
             <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
             <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
               <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
-              <a href="" class="btn btn-primary-outline">Watch Video</a>
+              <a href="" class="btn btn-primary--outline">Watch Video</a>
             </div>
           </div>
         </div>
@@ -232,7 +232,7 @@
             <strong><em>ESPeople efforts are invested through its learning solutions for nations priority growth & developmental road map</em></strong>
             <div class="d-flex gap-3 align-items-center mt-3 justify-content-around justify-content-md-start ">
               <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
-              <a href="" class="btn btn-primary-outline">Watch Video</a>
+              <a href="" class="btn btn-primary--outline">Watch Video</a>
             </div>
           </div>
         </div>
