--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -15,7 +15,7 @@ Renders a menu for the given menu ID.
     <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
       <div class="brand-name">
-        <p class="font-weight-bold mb-0">ESPeople</p>
+        <h6 class=" mb-0">ESPeople</h6>
         <em>TrainingSmiths</em>
       </div>
     </a>
@@ -25,7 +25,7 @@ Renders a menu for the given menu ID.
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse bg-light" id="navbarNav">
+    <div class="collapse navbar-collapse bg-light pe-4" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {{- with index site.Menus $menuID }}
         {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
