--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -222,21 +222,20 @@ img {
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2); }
 
 .hero {
-  min-height: calc(70vh - 10vh); }
+  min-height: calc(100vh - 10vh); }
   @media (max-width: 768px) {
     .hero h1 {
       font-size: 1.5rem;
       font-weight: 400; } }
   .hero .carousel-inner {
     /* Set a fixed height */
-    height: calc(calc(70vh - 10vh)/2); }
+    height: calc(calc(100vh - 10vh) - 10%); }
     @media (min-width: 768px) {
       .hero .carousel-inner {
-        height: 400px;
         border-radius: 10px; } }
     .hero .carousel-inner .carousel-image {
       /* Make sure the image fills the height */
-      height: calc(calc(70vh - 10vh)/2);
+      height: 400px;
       object-fit: cover;
       /* Preserve aspect ratio and cover the area */ }
       @media (max-width: 768px) {
