--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -36,12 +36,12 @@
                 <h5>ESP Non-Profit</h5>
               </div>
             </div>
-            <!-- <div class="carousel-item">
-              <img src="/images/hero-img-3.jpg" class="d-block w-100 carousel-image neumorphism " alt="Third Image">
+            <div class="carousel-item">
+              <img src="/images/students.jpeg" class="d-block w-100 carousel-image neumorphism " alt="Third Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Education</h5>
               </div>
-            </div> -->
+            </div>
             <div class="carousel-item">
               <img src="/images/education-img-1.jpeg" class="d-block w-100 carousel-image neumorphism "
                 alt="Third Image">
@@ -50,7 +50,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/rashtrapathi-bhavan.jpg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/government-org.jpeg" class="d-block w-100 carousel-image neumorphism "
                 alt="Fourth Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Government</h5>
@@ -148,7 +148,7 @@
           </div>
         </div>
         <div class="col-md-6 order-first">
-          <img src="/images/ESP-Business-1.jpeg" alt="Business Icon" class="industry-icon neumorphism">
+          <img src="/images/business-icon-1.png" alt="Business Icon" class="industry-icon neumorphism">
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/non-profit.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
+          <img src="/images/non-profit-1.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6">
           <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-building-ngo"></i>ESP Non-Profit</h3>
@@ -225,7 +225,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/Indian-Parliment-1.webp" alt="Government Icon" class="industry-icon neumorphism">
+          <img src="/images/government-org.png" alt="Government Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-2">
           <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-landmark"></i>ESP Government</h3>
@@ -329,7 +329,7 @@
 </section>
 
 <!-- learning model flower blossom animation section -->
-<div class="learning-model-container">
+<div class="learning-model-container d-none">
   <div class="my-4 text-center">
     <h1 class="my-3">ESP Learning model</h1>
     <a class="btn btn-primary" onclick="nextStage('awareness')">Start Learning</a>
@@ -378,20 +378,6 @@
     <h2 class="section-title mb-5">Why ESPeople</h2>
 
     <div class="row justify-content-center">
-      <!-- Card 1: Our core belief -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="neumorphic-card">
-          <h4 class="mt-3">Our Core Belief</h4>
-          <img src="/images/tyndal-effect.jpeg" alt="Philosophy img">
-          <p class="mt-3">Love people for who they are instead of judging them for what they are not....
-            <br> <br>
-            Essence is, accept people as they are!
-            <br> <br>
-            Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational growth goals
-          </p>
-        </div>
-      </div>
-
       <!-- Card 2: ESP Learning Model -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="neumorphic-card">
@@ -407,16 +393,33 @@
           </ul>
         </div>
       </div>
+      
+      <!-- Card 1: Our core belief -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="neumorphic-card">
+          <h4 class="mt-3">Our Core Belief</h4>
+          <img src="/images/core-belief.png" alt="our-core-belief img">
+          <p class="mt-3">Love people for who they are instead of judging them for what they are not....
+            <br> <br>
+            Essence is, accept people as they are!
+            <br> <br>
+            Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational growth goals
+          </p>
+        </div>
+      </div>
+
       <!-- card 3: What we deliver -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class=" neumorphic-card">
           <h4 class="mt-3">What we deliver</h4>
-          <img src="/images/what-we-deliver.png" alt="what we deliver">
+          <img src="/images/what-we-deliver-1.png" alt="what we deliver">
           <p class="text-center text-md-start mt-3">We simply ENERGIZE your people capabilities & then SYNERGIZE them with their core team for high performance</p>
           <strong><em>"Thus we are ESPeople Trainingsmiths"</em></strong>
 
         </div>
       </div>
+
+      
 
       <!-- Card 3: Adapting to Change -->
       <div class="col-lg-4 col-md-6 mb-4 d-none">
